--- a/TreeClimbr/MapView/Base.lproj/Main.storyboard
+++ b/TreeClimbr/MapView/Base.lproj/Main.storyboard
@@ -7,7 +7,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,9 +23,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dCU-1J-pdG">
-                                <rect key="frame" x="20" y="20" width="37.5" height="37.5"/>
+                                <rect key="frame" x="168" y="606.5" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="dCU-1J-pdG" secondAttribute="height" multiplier="1:1" id="1w4-zF-Zlt"/>
+                                    <constraint firstAttribute="height" constant="40" id="1OL-04-zfL"/>
+                                    <constraint firstAttribute="width" constant="40" id="9xM-9M-HRs"/>
+                                    <constraint firstAttribute="width" secondItem="dCU-1J-pdG" secondAttribute="height" multiplier="1:1" id="OFI-wm-LrP"/>
                                 </constraints>
                                 <state key="normal" image="menubutton"/>
                                 <connections>
@@ -34,13 +35,13 @@
                                 </connections>
                             </button>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0q5-aI-TA7" userLabel="side buttons view">
-                                <rect key="frame" x="6" y="67.5" width="66" height="263"/>
+                                <rect key="frame" x="51" y="522" width="272" height="76"/>
                                 <subviews>
-                                    <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="UEF-Eu-ixv">
-                                        <rect key="frame" x="5" y="10" width="56" height="243"/>
+                                    <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="UEF-Eu-ixv">
+                                        <rect key="frame" x="15" y="5" width="242" height="66"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="drO-04-UxG">
-                                                <rect key="frame" x="0.0" y="0.0" width="56" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="48" height="66"/>
                                                 <state key="normal" title="Logout">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
@@ -49,21 +50,21 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gaB-3D-nnI" userLabel="MyTreesButton">
-                                                <rect key="frame" x="0.0" y="40" width="56" height="66"/>
+                                                <rect key="frame" x="58" y="0.0" width="56" height="66"/>
                                                 <state key="normal" image="mytreesbutton"/>
                                                 <connections>
                                                     <segue destination="EXS-MP-yW1" kind="presentation" identifier="toTreeList" id="poX-WJ-aBE"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VL8-Uf-BN7">
-                                                <rect key="frame" x="0.0" y="116" width="56" height="64"/>
+                                                <rect key="frame" x="124" y="0.0" width="56" height="66"/>
                                                 <state key="normal" image="treeatuserloc"/>
                                                 <connections>
                                                     <action selector="addTreeToUserLoc:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tXr-2h-3aM"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hau-Kk-nEr">
-                                                <rect key="frame" x="0.0" y="190" width="56" height="53"/>
+                                                <rect key="frame" x="190" y="0.0" width="52" height="66"/>
                                                 <state key="normal" image="userlocation"/>
                                                 <connections>
                                                     <action selector="centerToUser:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5oP-NP-N1n"/>
@@ -75,23 +76,22 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="UEF-Eu-ixv" firstAttribute="leading" secondItem="0q5-aI-TA7" secondAttribute="leading" constant="5" id="GAU-6c-bDr"/>
-                                    <constraint firstItem="UEF-Eu-ixv" firstAttribute="top" secondItem="0q5-aI-TA7" secondAttribute="top" constant="10" id="PCi-wM-zOG"/>
-                                    <constraint firstAttribute="trailing" secondItem="UEF-Eu-ixv" secondAttribute="trailing" constant="5" id="TaY-R7-Q2q"/>
-                                    <constraint firstAttribute="bottom" secondItem="UEF-Eu-ixv" secondAttribute="bottom" constant="10" id="a87-HP-P1r"/>
+                                    <constraint firstAttribute="bottom" secondItem="UEF-Eu-ixv" secondAttribute="bottom" constant="5" id="BFD-Zf-LAq"/>
+                                    <constraint firstItem="UEF-Eu-ixv" firstAttribute="top" secondItem="0q5-aI-TA7" secondAttribute="top" constant="5" id="Dg7-Ql-8Gh"/>
+                                    <constraint firstAttribute="trailing" secondItem="UEF-Eu-ixv" secondAttribute="trailing" constant="15" id="crW-zp-x3x"/>
+                                    <constraint firstItem="UEF-Eu-ixv" firstAttribute="leading" secondItem="0q5-aI-TA7" secondAttribute="leading" constant="15" id="iSu-bJ-zP3"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="JRg-tX-Piz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="2Ic-PO-WRa"/>
-                            <constraint firstItem="dCU-1J-pdG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6Va-Qr-uuw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dCU-1J-pdG" secondAttribute="bottom" constant="20" id="7g2-CD-VlF"/>
                             <constraint firstItem="JRg-tX-Piz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DOI-ul-iKm"/>
-                            <constraint firstItem="dCU-1J-pdG" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.1" id="EdN-UO-R1n"/>
-                            <constraint firstItem="dCU-1J-pdG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Hri-id-J3d"/>
                             <constraint firstItem="JRg-tX-Piz" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ezX-Bi-V8a"/>
-                            <constraint firstItem="0q5-aI-TA7" firstAttribute="centerX" secondItem="dCU-1J-pdG" secondAttribute="centerX" id="lwc-Xk-Z4I"/>
-                            <constraint firstItem="0q5-aI-TA7" firstAttribute="top" secondItem="dCU-1J-pdG" secondAttribute="bottom" constant="10" id="wGV-IF-Jgl"/>
+                            <constraint firstItem="0q5-aI-TA7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kCh-ls-5Sk"/>
+                            <constraint firstItem="dCU-1J-pdG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="m7y-6v-Wt6"/>
+                            <constraint firstItem="dCU-1J-pdG" firstAttribute="top" secondItem="0q5-aI-TA7" secondAttribute="bottom" constant="8.5" id="oZQ-Pm-67L"/>
                             <constraint firstItem="JRg-tX-Piz" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yX3-IB-4Jx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
